Attempt to create a test/demo suite. Added Fuchsia forms skin.

--- a/Templates/Website/qube/MasterCore.master
+++ b/Templates/Website/qube/MasterCore.master
@@ -29,7 +29,7 @@
                 $(".date").datepicker({
                     changeMonth: true,
                     changeYear: true,
-                    dateFormat: '<%= System.Globalization.CultureInfo.CurrentUICulture.DateTimeFormat.ShortDatePattern %>'
+                    dateFormat: 'dd/mm/yy'
                 });
             });
         </script>
